examples/wishbone/expects/test_sram_incrementing_8_12_1.bi.expect
// trace 0
trace {
    reset(); [2]
    reset(); [3]
    reset(); [4]
}
error: [read_burst_increment_wrap_4@25] executing step 5 of the transaction: 04000007 != 04000003
    ┌─ examples/wishbone/wishbone.prot:408:9
    │
408 │         self.ADR := start_addr[31:4] ## (start_addr[3:2] + iter_count::<u2>()) ## start_addr[1:0];
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [read_burst_increment_wrap_4@25] executing step 5 of the transaction: 04000007 != 04000003


// trace 1
trace {
    reset(); [2]
    reset(); [3]
    reset(); [4]
}
error: [read_burst_increment_wrap_4@25L] executing step 5 of the transaction: 2 != 7
    ┌─ examples/wishbone/wishbone.prot:412:13
    │
412 │             self.CTI := 3'b111;
    │             ^^^^^^^^^^^^^^^^^^^ [read_burst_increment_wrap_4@25L] executing step 5 of the transaction: 2 != 7

error: [read_burst_increment_wrap_4@25L] executing step 5 of the transaction: 04000007 != 04000003
    ┌─ examples/wishbone/wishbone.prot:408:9
    │
408 │         self.ADR := start_addr[31:4] ## (start_addr[3:2] + iter_count::<u2>()) ## start_addr[1:0];
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [read_burst_increment_wrap_4@25L] executing step 5 of the transaction: 04000007 != 04000003

---CODE---
1
